--- a/project-demo/index.html
+++ b/project-demo/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&family=Source+Code+Pro&family=Varela+Round&display=swap" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&family=Source+Code+Pro&family=Varela+Round&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
